--- a/index.html
+++ b/index.html
@@ -1,29 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>AES Encrypt/Decrypt</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+  <title>Truyền File An Toàn</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
 </head>
-<body>
-<div class="container">
-    <h2>🔐 AES Encryption & Decryption</h2>
-    <div class="form-section">
-        <h3>Mã hóa file</h3>
-        <form action="/encrypt" method="post" enctype="multipart/form-data">
-            <input type="file" name="file" required><br>
-            <input type="text" name="key" placeholder="Nhập khóa AES" required><br>
-            <button type="submit">Mã hóa & Tải xuống</button>
-        </form>
-    </div>
-    <div class="form-section">
-        <h3>Giải mã file</h3>
-        <form action="/decrypt" method="post" enctype="multipart/form-data">
-            <input type="file" name="file" required><br>
-            <input type="text" name="key" placeholder="Nhập khóa AES" required><br>
-            <button type="submit">Giải mã & Tải xuống</button>
-        </form>
-    </div>
-</div>
+<body class="container py-5">
+  <h2 class="mb-4">Upload File để Truyền</h2>
+  <form action="/upload" method="post" enctype="multipart/form-data">
+    <input type="file" name="file" class="form-control mb-3" required>
+    <button type="submit" class="btn btn-primary">Gửi</button>
+  </form>
 </body>
 </html>
